manifests/minecraft/unmined/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unmined
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unmined
  template:
    metadata:
      labels:
        app: unmined
    spec:
      containers:
      - name: darkhttpd
        image: ghcr.io/cinnamondoll/darkhttpd:latest
        volumeMounts:
        - name: unmined
          mountPath: /var/www/htdocs
        ports:
        - containerPort: 80
      volumes:
      - name: unmined
        persistentVolumeClaim:
          claimName: unmined
