manifests/minecraft/unmined/service.yml
apiVersion: v1
kind: Service
metadata:
  name: unmined
spec:
  selector:
    app: unmined
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
