manifests/minecraft/unmined/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unmined
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - minecraft.vanad.is
    secretName: minecraft-vanad-is-tls

  rules:
  - host: minecraft.vanad.is
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unmined
            port:
              number: 80
